--- a/servers/config/config.json
+++ b/servers/config/config.json
@@ -1,11 +1,12 @@
 ﻿{
    "cpu": {
-      "threshold": 0.5,
-      "weight": 1
+      "threshold": 0.5
    },
    "memory": {
-      "threshold": 0.5,
-      "weight": 3
+      "threshold": 0.5
+   },
+   "workerPerformance": {
+      "threshold": 0.25
    },
    "requestResourceInterval": 1,
    "dispatchInterval": 10,
