--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "angular": "^1.6.9",
     "angular-gridster": "^0.13.14",
+    "angular-route": "^1.6.9",
+    "angular-utils-pagination": "^0.11.1",
     "angularjs-gauge": "^2.2.0",
     "archiver": "^2.1.0",
     "bcryptjs": "^2.4.3",
@@ -24,6 +26,7 @@
     "chart.js": "^2.5.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "datatables": "^1.10.13",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
