--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-zip": "^1.1.1",
     "nodemailer": "^4.1.2",
     "nodemon": "^1.17.1",
+    "parse-data-url": "^0.2.0",
     "passport": "^0.3.2",
     "passport-local": "~1.0.0",
     "popper.js": "^1.12.9",
