--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "angular": "^1.6.9",
+    "angular-chart.js": "^1.1.1",
     "angular-gridster": "^0.13.14",
     "angular-route": "^1.6.9",
+    "angular-ui-bootstrap": "^2.5.6",
     "angular-utils-pagination": "^0.11.1",
     "angularjs-gauge": "^2.2.0",
     "archiver": "^2.1.0",
