--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "angular": "^1.6.9",
+    "angular-animate": "^1.6.10",
     "angular-chart.js": "^1.1.1",
     "angular-gridster": "^0.13.14",
     "angular-route": "^1.6.9",
@@ -41,6 +42,7 @@
     "jquery": "^3.3.1",
     "jquery-easing": "0.0.1",
     "json-2-csv": "^2.1.2",
+    "json2csv": "^4.1.2",
     "lodash": "~4.17.4",
     "log4js": "^2.3.4",
     "mkdirp": "^0.5.1",
@@ -55,8 +57,10 @@
     "rimraf": "^2.6.2",
     "sb-admin-2": "^3.3.8",
     "startbootstrap-sb-admin": "^4.0.0",
+    "tmp": "0.0.33",
     "traceback": "^0.3.1",
     "uuid": "^3.2.1",
-    "validator": "~8.0.0"
+    "validator": "~8.0.0",
+    "zip-folder": "^1.0.0"
   }
 }
