--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web Dispatcher",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "esw *.js database servers --color",
+    "test": "npm run lint"
   },
   "keywords": [
     "dispatcher"
@@ -62,5 +63,11 @@
     "uuid": "^3.2.1",
     "validator": "~8.0.0",
     "zip-folder": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-watch": "^3.1.4"
   }
 }
