--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,9 @@
         "named": "never"
       }
     ],
+    "no-undef": [
+      0
+    ],
     "no-use-before-define": [
       2,
       "nofunc"
