Final lint cleaning commit

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,9 @@
     "no-case-declarations": [
       0
     ],
+    "no-prototype-builtins": [
+      0
+    ],
     "no-use-before-define": [
       2,
       "nofunc"
