Remove arrow functions to avoid problems with Angular

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,12 @@
         "named": "never"
       }
     ],
+    "func-names": [
+      0
+    ],
+    "prefer-arrow-callback": [
+      0
+    ],
     "no-undef": [
       0
     ],
