--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "datatables": "^1.10.13",
     "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "express": "^4.16.3",
     "express-fileupload": "^0.1.4",
     "express-session": "^1.15.4",
     "express-validator": "^3.2.1",
@@ -44,8 +45,9 @@
     "jquery-easing": "0.0.1",
     "json-2-csv": "^2.1.2",
     "json2csv": "^4.1.2",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "~4.17.4",
-    "log4js": "^2.3.4",
+    "log4js": "^3.0.5",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.11.1",
     "node-zip": "^1.1.1",
@@ -57,7 +59,7 @@
     "popper.js": "^1.12.9",
     "rimraf": "^2.6.2",
     "sb-admin-2": "^3.3.8",
-    "startbootstrap-sb-admin": "^4.0.0",
+    "startbootstrap-sb-admin": "^5.0.1",
     "tmp": "0.0.33",
     "traceback": "^0.3.1",
     "uuid": "^3.2.1",
