Rename all remaining occurrences of 'worker' to 'slave'

--- a/servers/config/config.json
+++ b/servers/config/config.json
@@ -5,7 +5,7 @@
    "memory": {
       "threshold": 0
    },
-   "workerPerformance": {
+   "slavePerformance": {
       "threshold": 0.25
    },
    "requestResourceInterval": 1,
