--- a/package.json
+++ b/package.json
@@ -13,63 +13,24 @@
   "author": "Matheus Medeiros Sarmento",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "angular": "^1.6.9",
-    "angular-animate": "^1.6.10",
-    "angular-chart.js": "^1.1.1",
-    "angular-gridster": "^0.13.14",
-    "angular-route": "^1.6.9",
-    "angular-ui-bootstrap": "^2.5.6",
-    "angular-utils-pagination": "^0.11.1",
-    "angularjs-gauge": "^2.2.0",
-    "archiver": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "bluebird": "~3.5.0",
     "body-parser": "^1.17.1",
-    "bootstrap": "^4.0.0",
-    "bootstrap-filestyle": "^1.2.1",
-    "chart.js": "^2.5.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
-    "datatables": "^1.10.13",
-    "dispatcher-protocol": "^1.0.0",
-    "ejs": "~2.5.6",
+    "dispatcher-protocol": "^1.0.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
-    "express-fileupload": "^0.1.4",
-    "express-session": "^1.15.4",
-    "express-validator": "^3.2.1",
-    "font-awesome": "^4.7.0",
-    "formidable": "~1.1.1",
-    "ip": "~1.1.5",
-    "jquery": "^3.3.1",
-    "jquery-easing": "0.0.1",
-    "json-2-csv": "^2.1.2",
-    "json2csv": "^4.1.2",
     "jsonwebtoken": "^8.3.0",
-    "lodash": "~4.17.4",
-    "log4js": "^3.0.5",
-    "mkdirp": "^0.5.1",
+    "log4js": "^3.0.6",
     "mongoose": "^4.11.1",
-    "node-zip": "^1.1.1",
     "nodemailer": "^4.1.2",
-    "nodemon": "^1.17.1",
     "parse-data-url": "^0.2.0",
-    "passport": "^0.3.2",
-    "passport-local": "~1.0.0",
-    "popper.js": "^1.12.9",
-    "rimraf": "^2.6.2",
-    "sb-admin-2": "^3.3.8",
-    "startbootstrap-sb-admin": "^5.0.1",
-    "tmp": "0.0.33",
-    "traceback": "^0.3.1",
-    "uuid": "^3.2.1",
-    "validator": "~8.0.0",
-    "zip-folder": "^1.0.0"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-watch": "^3.1.4"
   }
