--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Matheus Medeiros Sarmento",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/mongoose": "^5.5.17",
+    "@types/node": "^12.7.5",
     "angular": "^1.6.9",
     "angular-animate": "^1.6.10",
     "angular-chart.js": "^1.1.1",
