--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "outDir": "./dist",
         "target": "es6",
+	"allowJs": true,
         "module": "commonjs"
     },
     "include": [
