--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "app.js",
   "scripts": {
     "lint": "esw *.js database servers --color",
-    "test": "npm run lint"
+    "test": "npm run lint",
+    "build": "npm run html && tsc",
+    "dev":  "nodemon dist/app.js",
+    "html": "copyfiles -V -u 4 -e *.js -e *.ts \"src/servers/web/public/**/*\" dist/servers/web/public"
   },
   "keywords": [
     "dispatcher"
@@ -16,6 +19,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/mongoose": "^5.5.17",
     "@types/node": "^12.7.5",
+    "@types/passport": "^1.0.1",
     "angular": "^1.6.9",
     "angular-animate": "^1.6.10",
     "angular-chart.js": "^1.1.1",
@@ -34,6 +38,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
+    "copyfiles": "^2.1.1",
     "datatables": "^1.10.13",
     "dispatcher-protocol": "^2.0.0",
     "ejs": "~2.5.6",
