--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "esw *.js database servers --color",
     "test": "npm run lint",
     "build": "npm run html && tsc",
-    "dev":  "nodemon dist/app.js",
+    "dev": "nodemon dist/app.js",
     "html": "copyfiles -u 4 -e *.js -e *.ts \"src/servers/web/public/**/*\" dist/servers/web/public"
   },
   "keywords": [
@@ -17,9 +17,12 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express-session": "^1.15.14",
     "@types/mongoose": "^5.5.17",
     "@types/node": "^12.7.5",
     "@types/passport": "^1.0.1",
+    "@types/passport-local": "^1.0.33",
     "angular": "^1.6.9",
     "angular-animate": "^1.6.10",
     "angular-chart.js": "^1.1.1",
@@ -42,7 +45,7 @@
     "datatables": "^1.10.13",
     "dispatcher-protocol": "^2.0.0",
     "ejs": "~2.5.6",
-    "express": "~4.15.2",
+    "express": "^4.15.5",
     "express-fileupload": "^0.1.4",
     "express-session": "^1.15.4",
     "express-validator": "^3.2.1",
