Add new Angular and proxy

--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "lint": "esw *.js database servers --color",
     "test": "npm run lint",
-    "build": "npm run copy-html && npm run copy-config && tsc",
+    "build": "npm run copy-config && tsc",
     "dev": "tsnd --watch --respawn src/app.ts",
-    "copy-html": "copyfiles -u 4 -e *.js -e *.ts \"src/servers/web/public/**/*\" dist/servers/web/public",
     "copy-config": "copyfiles -u 3 src/servers/config/config.json dist/servers/config/"
   },
   "keywords": [
@@ -20,7 +19,9 @@
     "@types/archiver": "^3.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
+    "@types/express-http-proxy": "^1.5.12",
     "@types/express-session": "^1.15.14",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/json2csv": "^4.5.0",
     "@types/mkdirp": "^0.5.2",
     "@types/mongoose": "^5.5.17",
@@ -30,20 +31,10 @@
     "@types/passport-local": "^1.0.33",
     "@types/tmp": "^0.1.0",
     "@types/uuid": "^3.4.5",
-    "angular": "^1.6.9",
-    "angular-animate": "^1.6.10",
-    "angular-chart.js": "^1.1.1",
-    "angular-gridster": "^0.13.14",
-    "angular-route": "^1.6.9",
-    "angular-ui-bootstrap": "^2.5.6",
-    "angular-utils-pagination": "^0.11.1",
-    "angularjs-gauge": "^2.2.0",
     "archiver": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "~3.5.0",
     "body-parser": "^1.17.1",
-    "bootstrap": "^4.0.0",
-    "bootstrap-filestyle": "^1.2.1",
     "chart.js": "^2.5.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
@@ -58,6 +49,7 @@
     "express-validator": "^3.2.1",
     "font-awesome": "^4.7.0",
     "formidable": "~1.1.1",
+    "http-proxy-middleware": "^0.20.0",
     "ip": "~1.1.5",
     "jquery": "^3.3.1",
     "jquery-easing": "0.0.1",
