project: Allow default synthetic imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,18 @@
     "compilerOptions": {
         "outDir": "./dist",
         "target": "es6",
-        "esModuleInterop":true,
-	    "allowJs": true,
-        "module": "commonjs"
+        "esModuleInterop": true,
+        "allowJs": true,
+        "module": "commonjs",
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "./src/**/*"
     ],
     "exclude": [
-      "node_modules",
-      "dist",
-      "src/servers/web/client",
+        "node_modules",
+        "dist",
+        "src/servers/web/client",
     ],
     "declaration": true
 }
-
