--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express-session": "^1.15.14",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/json2csv": "^4.5.0",
+    "@types/jsonwebtoken": "^8.3.4",
     "@types/mkdirp": "^0.5.2",
     "@types/mongoose": "^5.5.17",
     "@types/node": "^12.7.5",
@@ -55,6 +56,7 @@
     "jquery-easing": "0.0.1",
     "json-2-csv": "^2.1.2",
     "json2csv": "^4.1.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "~4.17.4",
     "log4js": "^2.3.4",
     "mkdirp": "^0.5.1",
