--- a/src/servers/web/client/package.json
+++ b/src/servers/web/client/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~8.2.7",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "lacuna-mat-table": "2.0.14",
+    "ngx-loading": "^3.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
