--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^8.3.4",
     "@types/mkdirp": "^0.5.2",
     "@types/mongoose": "^5.5.17",
+    "@types/multer": "^1.3.10",
     "@types/node": "^12.7.5",
     "@types/nodemailer": "^6.2.1",
     "@types/passport": "^1.0.1",
@@ -61,6 +62,7 @@
     "log4js": "^2.3.4",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.11.1",
+    "multer": "^1.4.2",
     "node-zip": "^1.1.1",
     "nodemailer": "^4.1.2",
     "nodemon": "^1.17.1",
