--- a/src/servers/web/client/package.json
+++ b/src/servers/web/client/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "lacuna-mat-table": "2.0.14",
+    "ng2-dnd": "^5.0.2",
     "ngx-loading": "^3.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
