--- a/src/servers/web/client/package.json
+++ b/src/servers/web/client/package.json
@@ -26,6 +26,7 @@
     "lacuna-mat-table": "2.0.14",
     "ng2-dnd": "^5.0.2",
     "ngx-loading": "^3.0.1",
+    "ngx-mat-select-search": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
