--- a/src/servers/web/client/package.json
+++ b/src/servers/web/client/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@types/file-saver": "^2.0.1",
     "bootstrap": "^4.3.1",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "lacuna-mat-table": "2.0.14",
     "ng2-dnd": "^5.0.2",
