--- a/src/servers/web/client/package.json
+++ b/src/servers/web/client/package.json
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@types/chart.js": "^2.8.10",
     "@types/file-saver": "^2.0.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.1",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "lacuna-mat-table": "2.0.14",
+    "ng2-charts": "^2.3.0",
     "ng2-dnd": "^5.0.2",
     "ngx-loading": "^3.0.1",
     "ngx-mat-select-search": "^2.0.0",
