--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/json2csv": "^4.5.0",
     "@types/jsonwebtoken": "^8.3.4",
+    "@types/lodash": "^4.14.149",
     "@types/mkdirp": "^0.5.2",
     "@types/mongoose": "^5.5.17",
     "@types/multer": "^1.3.10",
@@ -31,6 +32,7 @@
     "@types/nodemailer": "^6.2.1",
     "@types/passport": "^1.0.1",
     "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^2.1.4",
     "@types/tmp": "^0.1.0",
     "@types/uuid": "^3.4.5",
     "archiver": "^2.1.1",
@@ -58,7 +60,7 @@
     "json-2-csv": "^2.1.2",
     "json2csv": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "~4.17.4",
+    "lodash": "^4.17.15",
     "log4js": "^2.3.4",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.11.1",
@@ -73,6 +75,7 @@
     "rimraf": "^2.6.2",
     "sanitize-filename": "^1.6.3",
     "sb-admin-2": "^3.3.8",
+    "socket.io": "^2.3.0",
     "startbootstrap-sb-admin": "^4.0.0",
     "tmp": "0.0.33",
     "traceback": "^0.3.1",
