--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "lint": "esw *.js database servers --color",
     "test": "npm run lint",
-    "build": "tsc && npm run copy-config",
-    "dev": "tsnd --watch --ignore-watch node_modules --respawn src/app.ts",
-    "copy-config": "copyfiles -u 3 src/servers/config/config.json dist/servers/config/"
+    "build": "tsc",
+    "dev": "tsnd --watch --ignore-watch node_modules --respawn src/app.ts"
   },
   "keywords": [
     "dispatcher"
