--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
-version: '2'
+version: "2"
 services:
-    dispatchermasterandmongo:
-        build: .
-        container_name: "dispatchermaster"
-        environment:
-            - NODE_ENV=production
-        depends_on:
-            - mongodb
-        network_mode: "host"
-    mongodb:
-        image: mongo:latest
-        container_name: "mongodb"
-        environment:
-          - MONGO_DATA_DIR=/data/db
-          - MONGO_LOG_DIR=/dev/null
-        volumes:
-          - ./data/db:/data/db
-        ports:
-            - 27017:27017
+  dispatcher:
+    build: .
+    container_name: "dispatcher"
+    environment:
+      - NODE_ENV=production
+    depends_on:
+      - mongodb
+    network_mode: "host"
+  mongodb:
+    image: mongo:latest
+    container_name: "mongodb"
+    environment:
+      - MONGO_DATA_DIR=/data/db
+      - MONGO_LOG_DIR=/dev/null
+    volumes:
+      - ./data/db:/data/db
+    ports:
+      - 27017:27017
