--- a/src/servers/web/client/tsconfig.json
+++ b/src/servers/web/client/tsconfig.json
@@ -10,13 +10,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "esnext",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "esnext.bigint"
     ],
     "allowSyntheticDefaultImports": true
   },
