--- a/src/servers/web/client/tsconfig.json
+++ b/src/servers/web/client/tsconfig.json
@@ -10,14 +10,13 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "esnext",
+    "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2018",
-      "dom",
-      "esnext.bigint"
+      "dom"
     ],
     "allowSyntheticDefaultImports": true
   },
