--- a/src/servers/web/client/package.json
+++ b/src/servers/web/client/package.json
@@ -34,9 +34,7 @@
     "ngx-mat-select-search": "^2.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
-  },
-  "devDependencies": {
+    "zone.js": "~0.9.1",
     "@angular-devkit/build-angular": "^0.803.22",
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
