--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "lint": "esw *.js database servers --color",
     "test": "npm run lint",
     "build": "tsc",
-    "dev": "tsnd --watch --ignore-watch node_modules --respawn src/app.ts"
+    "dev": "tsnd --watch --ignore-watch node_modules --respawn src/app.ts",
+    "publish": "np",
+    "postversion": "./docker-publish.sh"
+  },
+  "np": {
+    "publish": false,
+    "message": "v%s release"
   },
   "keywords": [
     "dispatcher"
@@ -22,6 +28,20 @@
   ],
   "license": "BSD-2-Clause",
   "dependencies": {
+    "@types/archiver": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.31",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/json2csv": "^4.5.0",
+    "@types/jsonwebtoken": "^8.3.4",
+    "@types/lodash": "^4.14.149",
+    "@types/mkdirp": "^0.5.2",
+    "@types/mongoose": "^5.5.17",
+    "@types/multer": "^1.3.10",
+    "@types/node": "^12.7.5",
+    "@types/nodemailer": "^6.2.1",
+    "@types/socket.io": "^2.1.4",
+    "@types/tmp": "^0.1.0",
     "archiver": "^2.1.1",
     "bcryptjs": "^2.4.3",
     "bluebird": "~3.5.0",
@@ -29,7 +49,6 @@
     "cookie-parser": "^1.4.3",
     "dispatcher-protocol": "^4.0.0",
     "express": "^4.17.1",
-    "http-proxy-middleware": "^1.0.3",
     "json2csv": "^4.1.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -46,25 +65,11 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
-    "@types/archiver": "^3.0.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/http-proxy-middleware": "^0.19.3",
-    "@types/json2csv": "^4.5.0",
-    "@types/jsonwebtoken": "^8.3.4",
-    "@types/lodash": "^4.14.149",
-    "@types/mkdirp": "^0.5.2",
-    "@types/mongoose": "^5.5.17",
-    "@types/multer": "^1.3.10",
-    "@types/node": "^12.7.5",
-    "@types/nodemailer": "^6.2.1",
-    "@types/socket.io": "^2.1.4",
-    "@types/tmp": "^0.1.0",
-    "@types/bluebird": "^3.5.31",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-watch": "^3.1.4",
+    "np": "^7.6.2",
     "ts-node-dev": "^1.0.0-pre.43"
   }
 }
