Update install files

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,12 +9,12 @@ services:
       - DB_HOST=dispatcher-mongodb
       - DB_DATA=ons
       - DB_PORT=27017
-      - WEB_API_PORT=8080
-      - WORKER_API_PORT=16180
-      - AUTH_SECRET_KEY=${AUTH_SECRET_KEY}
+      - WEB_API_PORT=${DISPATCHER_MASTER_WEB_API_PORT}
+      - WORKER_API_PORT=${DISPATCHER_MASTER_WORKER_API_PORT}
+      - AUTH_SECRET_KEY=${DISPATCHER_MASTER_SECRET_KEY}
     ports:
-      - ${DISPATCHER_MASTER_PORT}:8080
-      - 16180:16180
+      - ${DISPATCHER_MASTER_WEB_API_PORT}:${DISPATCHER_MASTER_WEB_API_PORT}
+      - ${DISPATCHER_MASTER_WORKER_API_PORT}:${DISPATCHER_MASTER_WORKER_API_PORT}
     depends_on:
       - dispatcher-mongodb
   dispatcher-mongodb:
